# fastq_set

./: CHANGELOG.md  Cargo.toml  README.md  SLFE-notes.md  deny.toml  gz_wc.sh  lz4_wc.sh  time_cutadapt.sh
.github/: dependabot.yml
.github/workflows/: test.yml
benches/: array_bench.rs  benchmarks.rs
examples/: compare.py  example_read_pair_iter.rs  example_rna_chunk.rs  trim.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_read_pair.rs
src/: adapter_trimmer.rs  array.rs  background_iterator.rs  barcode.rs  bc_sort.rs  dna_align.rs  dna_read.rs  fastq_read.rs  illumina_header_info.rs  lib.rs  metric_utils.rs  new.rs  raw.rs  read_pair.rs  read_pair_iter.rs  read_pair_writer.rs  rna_read.rs  sample_def.rs  sample_index_map.rs  squality.rs  sseq.rs  utils.rs
src/barcode_sort/: mod.rs
src/bc_sort/: mod.rs
src/filenames/: bcl2fastq.rs  bcl_processor.rs  fastq_dir.rs  mod.rs
test/filenames/bcl2fastq/: Bystander_S2_L001_R1_001.fastq  Bystander_S2_L002_R2_001.fastq  Infected_S3_L001_R1_001.fastq  Infected_S3_L001_R2_001.fastq  Infected_S3_L002_R2_001.fastq  Mock_S1_L001_R1_001.fastq  Mock_S1_L001_R2_001.fastq  Mock_S1_L002_R1_001.fastq
test/filenames/bcl2fastq_lz4/: Bystander_S2_L001_R2_001.fastq.lz4  Bystander_S2_L002_R1_001.fastq.lz4  Bystander_S2_L002_R2_001.fastq.lz4  Infected_S3_L001_R1_001.fastq.lz4  Infected_S3_L002_R1_001.fastq.lz4  Infected_S3_L002_R2_001.fastq.lz4  Mock_S1_L001_R2_001.fastq.lz4  Mock_S1_L002_R2_001.fastq.lz4
test/filenames/bcl2fastq_no_lane_split/: README.txt
test/filenames/bcl_processor_2/: README.txt
tests/: 10K-agora-dev.txt  cutadapt_v1_18_anchored_3p.fa  cutadapt_v1_18_anchored_3p_polyA.fa  cutadapt_v1_18_anchored_5p.fa  cutadapt_v1_18_anchored_5p_polyA.fa  cutadapt_v1_18_anywhere_3p.fa  cutadapt_v1_18_anywhere_3p_polyA.fa  cutadapt_v1_18_anywhere_5p.fa  cutadapt_v1_18_anywhere_5p_polyA.fa  cutadapt_v1_18_non_internal_3p.fa  cutadapt_v1_18_non_internal_3p_polyA.fa  cutadapt_v1_18_non_internal_5p.fa  cutadapt_v1_18_non_internal_5p_polyA.fa  gex_rna_chunk.json  input.fa  input_polyA.fa  run_cutadapt.sh  vdj_rna_chunk.json
tests/filenames/bcl2fastq/: Bystander_S2_L001_R2_001.fastq  Bystander_S2_L002_R1_001.fastq  Infected_S3_L002_R1_001.fastq  Mock_S1_L002_R2_001.fastq
tests/filenames/bcl2fastq_2/: README.txt
tests/filenames/bcl2fastq_lz4/: Bystander_S2_L001_R1_001.fastq.lz4  Infected_S3_L001_R2_001.fastq.lz4  Mock_S1_L001_R1_001.fastq.lz4  Mock_S1_L002_R1_001.fastq.lz4
tests/read_pair_iter/: bad-char-I1.fastq  bad-format-I1.fastq  bad-header-I1.fastq  csi-1376-R1.fastq  csi-1376-R2.fastq  good-I1.fastq  good-I2.fastq  good-RA-single-end.fastq  good-RA.fastq  good-lz4-RA.fastq.lz4  imbalanced-RA.fastq  short-I1.fastq  short-I2.fastq  short-RA.fastq  slash1.fastq  slash2.fastq  weird-header-R2.fastq  weird-header2-R1.fastq  weird-header2-R2.fastq
tests/rna_read/: bc.json  bc_qual.json  cutadapt.out  interleaved_2k.fastq  interleaved_2k.fastq.lz4  interleaved_2k_insert.fastq  interleaved_trimmed_2k.fastq  r1_2k.fastq.lz4  r2_2k.fastq.lz4  rna_r1.json  rna_r1_qual.json  rna_r2.json  rna_r2_qual.json  run_cutadapt.sh  sc_vdj_chemistry.json  sc_vdj_r2_chemistry.json  umi.json  umi_qual.json  vdj_adapters.json
