[package]
name = "fastq_set"
version = "0.4.0"
authors = ["Patrick Marks <patrick@10xgenomics.com>", "Sreenath Krishnan <sreenath.krishnan@10xgenomics.com>"]
edition = "2018"
license = "MIT"
description = "Utilities for reading groups of FASTQ files from different sequencing reads of the same library molecule. Encodes filename conventions used by `bcl2fastq` from Illumina"
repository = "https://github.com/10XGenomics/fastq_set"
keywords = ["bioinformatics", "DNA", "sequencing"]
readme = "README.md"



[dependencies]
ordered-float = "1"
flate2 = { version = "^1.0", features = ["zlib"], default-features = false }
serde_derive = "*"
serde_json = "*"
serde = "*"
serde_bytes = "*"
bytes = { version = ">=0.5, <2", features = ["serde"] }
failure = { version = "0.1", features = ["backtrace"] }
glob = "0.3"
regex = { version = "1", default-features = false, features = ["std", "perf"] }
lazy_static = "1"
ahash = { version = "0.4", default-features = false, features = ["std"] }
log = "*"
rand = "0.7"
rand_xorshift = "0.2"
itertools = ">=0.8"
lz4 = "*"
fastq = "^0.6"
bio = "0.33.0"
generic-array = "0.14.4"

[dev-dependencies]
time = "*"
file_diff = "1.0"
criterion = "0.3"
bincode = "*"
psutil = ">=2.0"
pretty_assertions = "0.6.1"

[[bench]]
name = "benchmarks"
harness = false

[dev-dependencies.proptest]
version = "0.10"
default-features = false
# Enable all default features not known to break code coverage builds
features = ["default-code-coverage"]
