[package]
name = "fastq_set"
version = "0.5.2"
authors = ["Patrick Marks <patrick@10xgenomics.com>", "Sreenath Krishnan <sreenath.krishnan@10xgenomics.com>"]
edition = "2018"
license = "MIT"
description = "Utilities for reading groups of FASTQ files from different sequencing reads of the same library molecule. Encodes filename conventions used by `bcl2fastq` from Illumina"
repository = "https://github.com/10XGenomics/fastq_set"
keywords = ["bioinformatics", "DNA", "sequencing"]
readme = "README.md"
include = ["src/**/*", "LICENSE.txt", "README.md"]

resolver = "2"

[dependencies]
ordered-float = "1"
flate2 = { version = "^1.0", features = ["zlib"], default-features = false }
serde_derive = "*"
serde = "*"
bytes = { version = ">=0.5, <2", features = ["serde"] }
anyhow = { version = "1", features = ["backtrace"] }
regex = { version = "1", default-features = false, features = ["std", "perf"] }
lazy_static = "1"
rand = ">=0.7, <2"
rand_xorshift = ">=0.2"
itertools = ">=0.8"
lz4 = "*"
fastq = "^0.6"
bio = ">=0.33.0, <2"
thiserror = "1"

[dev-dependencies]
file_diff = "1.0"
glob = ">=0.3, <2"
criterion = "0.3"
bincode = "*"
libc = ">=0.2"
pretty_assertions = "0.7.2"
serde_json = "*"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "array_bench"
harness = false

[dev-dependencies.proptest]
version = "1"
default-features = false
features = ["std"]
